# sosText

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  install.sh
.qt/: QtDeploySupport.cmake
dev/: GOALS.md
docs/: .$sequenceDiagrams.drawio.bkp  doxygenConfig  sequenceDiagrams.drawio
docs/doxygen/html/: annotated.html  classes.html  dir_000000_000006.html  dir_000000_000008.html  dir_000009_000008.html  dir_000010_000000.html  dir_00f0a3b1654669903f8939607e046ce9.html  dir_00f0a3b1654669903f8939607e046ce9_dep.md5  dir_1b5558da58b9fc71051b650b3ef7b9ff.html  dir_1b5558da58b9fc71051b650b3ef7b9ff_dep.map  dir_1b5558da58b9fc71051b650b3ef7b9ff_dep.md5  dir_5194e5fea318fda12687127c23f8aba1.html  dir_5194e5fea318fda12687127c23f8aba1_dep.map  dir_5194e5fea318fda12687127c23f8aba1_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_94fb23dbc426b20067019cb1d884604d.html  dir_94fb23dbc426b20067019cb1d884604d_dep.map  dir_94fb23dbc426b20067019cb1d884604d_dep.md5  dir_9a3fffc52948afbda6a1e672c45300a0.html  dir_9a3fffc52948afbda6a1e672c45300a0_dep.map  dir_9a3fffc52948afbda6a1e672c45300a0_dep.md5  dir_9c03af6964069ca36ae5aed04b098584.html  dir_9c03af6964069ca36ae5aed04b098584_dep.map  dir_9c03af6964069ca36ae5aed04b098584_dep.md5  dir_a8eca90000f031d4cd8c20eb74dd7eef.html  dir_a8eca90000f031d4cd8c20eb74dd7eef_dep.map  dir_a8eca90000f031d4cd8c20eb74dd7eef_dep.md5  dir_b4c878975ff56627baa5e4cc1a85c9ec.html  (+26 more)
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000006.html  dir_000000_000007.html  dir_000000_000008.html  dir_000000_000010.html  dir_000002_000001.html  dir_000005_000002.html  dir_000005_000006.html  dir_000007_000000.html  dir_000008_000006.html  dir_000009_000003.html  dir_000010_000003.html  dir_000010_000006.html  dir_000010_000007.html  dir_00f0a3b1654669903f8939607e046ce9.html  dir_00f0a3b1654669903f8939607e046ce9_dep.map  dir_00f0a3b1654669903f8939607e046ce9_dep.md5  dir_1825ce294ad9671ea98f02d438d43e82.html  dir_1825ce294ad9671ea98f02d438d43e82.js  dir_1b5558da58b9fc71051b650b3ef7b9ff.html  dir_1b5558da58b9fc71051b650b3ef7b9ff_dep.map  dir_1b5558da58b9fc71051b650b3ef7b9ff_dep.md5  dir_2bc5f96d35cc57e292f536560c8d21a5.html  dir_2bc5f96d35cc57e292f536560c8d21a5.js  dir_2ea30aa2956a8db99dd22aa5e597f384.html  dir_2ea30aa2956a8db99dd22aa5e597f384.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca_dep.map  dir_313caf1132e152dd9b58bea13a4052ca_dep.md5  dir_5194e5fea318fda12687127c23f8aba1.html  dir_5194e5fea318fda12687127c23f8aba1_dep.map  dir_5194e5fea318fda12687127c23f8aba1_dep.md5  dir_5815f563d9f06f83f3a06b885ef35168.html  dir_5815f563d9f06f83f3a06b885ef35168.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  (+111 more)
docs/latex/: annotated.tex  files.tex  hierarchy.tex  refman.tex
html/: index.html
latex/: refman.tex
res/: sosText.desktop
sosText_autogen/: mocs_compilation.cpp
sosText_autogen/UVLADIE3JM/: moc_loadDialogWindow.cpp  moc_loadDialogWindow.cpp.d  moc_mainWindow.cpp  moc_mainWindow.cpp.d
sosText_autogen/include/: ui_loadDialogWindow.h  ui_mainWindow.h
src/: loadDialog.cpp  loadDialog.h  loadDialog.ui  loadDialogWindow.cpp  loadDialogWindow.h  loadDialogWindow.ui  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui
src/Settings/: setting.h
src/aboutWindow/: aboutWindow.cpp  aboutWindow.h
src/app/: app.cpp  app.h
src/appManager/: appManager.cpp  appManager.h
src/findToolbar/: findToolbar.cpp  findToolbar.h
src/mainWindow/: mainWindow.cpp  mainWindow.h  mainWindow.ui
src/outputTerminal/: outputTerminal.cpp  outputTerminal.h
src/project/: IFile.cpp  IFile.h  file.cpp  file.h  iProject.cpp  iProject.h  project.cpp  project.h
src/settings/: appSettings.cpp  appSettings.h  setting.cpp  setting.h  settings.cpp  settings.h
src/settingsWindow/: settingsWindow.cpp  settingsWindow.h  settingsWindow.ui
src/textEditTab/: textEditTab.cpp  textEditTab.h  textEditTab.ui
src/textSearcher/: textSearcher.cpp  textSearcher.h
src/utils/: appManager.cpp  appManager.h
(+560 files in other folders)
